--- a/blukiiSK_Mac/blukiiSK.framework/Versions/A/Resources/Info.plist
+++ b/blukiiSK_Mac/blukiiSK.framework/Versions/A/Resources/Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17E199</string>
+	<string>17E202</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>blukiiSK_Mac</string>
+	<string>blukiiSK</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.blukii.blukiiSK-Mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>blukiiSK_Mac</string>
+	<string>blukiiSK</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
